--- a/src/Components/Teapots/Teapots.css
+++ b/src/Components/Teapots/Teapots.css
@@ -49,11 +49,18 @@
 }
 
 .review-card {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
   border: 2px solid black;
   margin: 20px;
+  margin-right: 50px;
   padding: 10px;
-  width: 500px;
+  width: 100%;
   border-radius: 20px;
+}
+
+.review-card button {
 }
 
 h2 {
