--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,14 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+button {
+  padding: 3px;
+  background: white;
+  border-radius: 7px;
+}
+
+button:hover {
+  background-color: maroon;
+  color: white;
+}
