Some tweaks to show css

--- a/src/Components/Teapots/Teapots.css
+++ b/src/Components/Teapots/Teapots.css
@@ -39,8 +39,10 @@
 }
 
 .reviews-container {
+  margin: 0 auto;
   display: block;
-  margin: 30px;
+  margin-right: 50px;
+  margin-left: 20px;
   /* grid-template-columns: 1fr; */
 }
 
@@ -61,6 +63,11 @@
 }
 
 .review-card button {
+  margin-right: 15px;
+}
+
+.center-grid {
+  text-align: center;
 }
 
 h2 {
@@ -72,9 +79,12 @@ h2 {
   .teapot-container {
     grid-template-columns: 1fr 1fr;
   }
-  h2 {
+  .teapot-container h2 {
     grid-column: 1/3;
     grid-row: 1;
+  }
+  .show-container {
+    grid-template-columns: 1fr;
   }
 }
 
@@ -82,7 +92,7 @@ h2 {
   .teapot-container {
     grid-template-columns: 1fr;
   }
-  h2 {
+  .teapot-container h2 {
     grid-column: 1/2;
     grid-row: 1;
   }
