--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,23 @@ button:hover {
   background-color: maroon;
   color: white;
 }
+
+@keyframes slideInRight {
+  from {
+    transform: translateX(1000px);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+.square {
+  margin: 0 auto;
+  margin-top: 25%;
+  width: 300px;
+  height: 300px;
+  background-color: blue;
+  animation-name: slideInRight;
+  animation-duration: 3s;
+  animation-timing-function: ease-in;
+}
