Added css styling to show and index

--- a/src/Components/Common/FourOFourDetails.css
+++ b/src/Components/Common/FourOFourDetails.css
@@ -1,3 +1,11 @@
+body {
+  background-color: white;
+}
+
+.fof-details h1 {
+  color: black;
+}
+
 .fof-details {
   margin: 0 auto;
   text-align: center;
