--- a/src/Components/Teapots/Teapots.css
+++ b/src/Components/Teapots/Teapots.css
@@ -36,6 +36,7 @@
   border-radius: 20px;
   height: 300px;
   background-color: palegoldenrod;
+  min-width: 426px;
 }
 
 .image-section img {
@@ -45,14 +46,9 @@
   height: 300px;
 }
 
-/* .image-section {
-  padding-top: 5px;
-} */
-
 .reviews-container {
   margin: 0 auto;
   display: block;
-  /* margin-left: 0; */
   width: 85%;
 }
 
@@ -95,6 +91,7 @@ h2 {
   }
   .show-container {
     grid-template-columns: 1fr;
+    place-items: center;
   }
 }
 
