--- a/src/Components/Common/Home.css
+++ b/src/Components/Common/Home.css
@@ -8,7 +8,11 @@
 }
 
 /* body {
-  background-color: rgb(147, 147, 1);
+  background-color: goldenrod;
+} */
+
+/* .home-div {
+  background-color: goldenrod;
 } */
 
 .logo {
@@ -24,7 +28,7 @@
 
 .steam-wrap {
   position: absolute;
-  top: 40%;
+  top: 33%;
   left: 32%;
   /* margin-top: 25%;
   margin-left: 25%; */
