Edited word shows up when a review has been edited. Teapot url for 404 page edited.

--- a/src/Components/Teapots/Teapots.css
+++ b/src/Components/Teapots/Teapots.css
@@ -95,6 +95,20 @@ h2 {
   }
 }
 
+.search-input {
+  text-align: center;
+  margin-top: 20px;
+  font-size: 25px;
+  place-items: center;
+}
+
+.input-box {
+  height: 30px;
+  width: 250px;
+  border-radius: 5px;
+  text-align: center;
+}
+
 @media (max-width: 500px) {
   .teapot-container {
     grid-template-columns: 1fr;
