CSS changes to login and register pages. Fixed form css

--- a/src/Components/Common/NavBar.css
+++ b/src/Components/Common/NavBar.css
@@ -1,3 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+
+h1 {
+  font-family: "Lobster Two";
+  font-size: 50px;
+}
+
 .navbar-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
