--- a/src/Components/Common/Home.css
+++ b/src/Components/Common/Home.css
@@ -1,25 +1,19 @@
 @keyframes slideInRight {
   from {
-    transform: translateX(1000px);
+    transform: translateX(1200px);
   }
   to {
     transform: translateX(0);
   }
 }
 
-/* body {
-  background-color: goldenrod;
-} */
-
-/* .home-div {
-  background-color: goldenrod;
-} */
-
 .logo {
   margin: 0 auto;
-  position: absolute;
-  left: 25%;
-  top: 25%;
+  margin-top: 20%;
+  margin-left: 30%;
+  /* position: absolute; */
+  /* left: 25%; */
+  /* top: 25%; */
   animation-name: slideInRight;
   animation-duration: 3s;
   animation-timing-function: ease-in;
@@ -28,10 +22,8 @@
 
 .steam-wrap {
   position: absolute;
-  top: 33%;
-  left: 32%;
-  /* margin-top: 25%;
-  margin-left: 25%; */
+  top: 42%;
+  left: 36%;
   transform: translate(-50%, -50%);
   width: 300px;
   animation-delay: 3s;
