--- a/src/Components/Teapots/Teapots.css
+++ b/src/Components/Teapots/Teapots.css
@@ -3,18 +3,25 @@
   grid-template-columns: repeat(3, 1fr);
   text-align: center;
   margin: 30px;
-  gap: 30px;
+  gap: 50px;
 }
 
 .teapot-card {
   display: grid;
   grid-template-columns: 1 fr;
-  border: 2px solid black;
+  border: 2px solid palegoldenrod;
   border-radius: 20px;
   gap: 10px;
   padding: 10px;
   place-items: center;
   background-color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease-in-out;
+}
+
+.teapot-card:hover {
+  transform: scale(1.05);
+  border: 2px solid maroon;
 }
 
 .show-container {
@@ -34,7 +41,7 @@
   border: 2px solid black;
   padding: 10px;
   border-radius: 20px;
-  height: 300px;
+  height: 325px;
   background-color: palegoldenrod;
   min-width: 426px;
 }
@@ -43,7 +50,7 @@
   border: 2px solid black;
   border-radius: 20px;
   width: 400px;
-  height: 300px;
+  height: 325px;
 }
 
 .reviews-container {
@@ -81,20 +88,6 @@ h2 {
   grid-column: 1/4;
 }
 
-@media (max-width: 780px) {
-  .teapot-container {
-    grid-template-columns: 1fr 1fr;
-  }
-  .teapot-container h2 {
-    grid-column: 1/3;
-    grid-row: 1;
-  }
-  .show-container {
-    grid-template-columns: 1fr;
-    place-items: center;
-  }
-}
-
 .search-input {
   text-align: center;
   margin-top: 20px;
@@ -107,6 +100,34 @@ h2 {
   width: 250px;
   border-radius: 5px;
   text-align: center;
+}
+
+a:hover {
+  color: maroon;
+}
+
+span {
+  font-weight: 600;
+}
+
+article {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-top: 15px;
+}
+
+@media (max-width: 780px) {
+  .teapot-container {
+    grid-template-columns: 1fr 1fr;
+  }
+  .teapot-container h2 {
+    grid-column: 1/3;
+    grid-row: 1;
+  }
+  .show-container {
+    grid-template-columns: 1fr;
+    place-items: center;
+  }
 }
 
 @media (max-width: 500px) {
