--- a/src/Pages/Form.css
+++ b/src/Pages/Form.css
@@ -1,17 +1,15 @@
 .form-container {
   margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  gap: 10px;
+  display: block;
   border: 2px solid black;
   border-radius: 20px;
   width: 60%;
-  height: 300px;
+  height: 400px;
   margin-top: 15%;
   background-color: palegoldenrod;
-  text-align: center;
   place-items: center;
   font-size: 20px;
+  padding: 30px;
 }
 
 .form-container textarea {
@@ -25,16 +23,22 @@
 }
 
 .form-button-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   grid-row: 3;
-  grid-column: 2/3;
+  grid-column: 1/3;
 }
 
 .submit-button {
+  height: fit-content;
+  width: fit-content;
   padding: 5px;
   border-radius: 10px;
-  font-size: 16px;
+  font-size: 18px;
   background-color: white;
   margin-right: 10px;
+  margin-top: 20px;
 }
 
 .submit-button:hover {
@@ -43,16 +47,26 @@
 }
 
 .rating-input {
+  display: inline;
   width: 70px;
   height: 50px;
   text-align: center;
   font-size: 16px;
   border-radius: 10px;
+  padding-bottom: 20px;
 }
 
-/* .textarea {
-  text-align: center;
-  resize: none;
-  width: 500px;
-  height: 4em;
-} */
+.rating-input input {
+  margin-top: 20px;
+  width: 200px;
+  margin-left: 20px;
+}
+
+section {
+  margin-bottom: 50px;
+}
+
+label {
+  font-size: 20px;
+  font-weight: 600;
+}
