--- a/src/Pages/Form.css
+++ b/src/Pages/Form.css
@@ -37,6 +37,7 @@
   border-radius: 10px;
   font-size: 18px;
   background-color: white;
+  cursor: pointer;
   margin-right: 10px;
   margin-top: 20px;
 }
